feat(profile): remove impacto ecologico pessoal
